package nl.webser.scrum_escape.observer;

public interface DoorObserver {
    void onDoorOpened(String doorId);
} 