package nl.webser.scrum_escape.observer;

public interface Observer {
    void onIncorrectAnswer();
}