@startuml ScrumEscapeGame

' Hoofdklassen
class ScrumEscapeGame {
    + create()
    + showGameOver()
    + showSuccess()
}

class GameScreen implements Screen, DoorObserver {
    - Player player
    - Monster monster
    - List<Door> doors
    - QuestionManager questionManager
    - GameState gameState
    + render()
    + show()
    + onDoorOpened(doorId)
}

class Player {
    - float x
    - float y
    - Rectangle bounds
    + update()
    + render()
    + setPosition(x, y)
}

class Monster implements Observer {
    - boolean active
    + activate(player)
    + update(delta, player)
    + render(batch)
    + onIncorrectAnswer()
    + reset()
}

class Door {
    - String doorId
    - boolean isOpen
    - DoorObserver observer
    + open()
    + setObserver(observer)
    + isOpen()
    + getDoorId()
}

class QuestionManager {
    - Map<String, QuestionStrategy> questions
    + getInstance()
    + getQuestion(id)
    + getFinalQuestion(index)
}

interface QuestionStrategy {
    + getQuestion()
    + getOptions()
    + checkAnswer(selectedOption)
    + getQuestionId()
}

class GameState {
    - int score
    - Set<String> answeredQuestions
    - Set<String> openedDoors
    + getInstance()
    + addScore(points)
    + markQuestionAnswered(questionId)
    + markDoorOpened(doorId)
    + isDoorOpened(doorId)
    + reset()
}

interface Observer {
    + onIncorrectAnswer()
}

interface DoorObserver {
    + onDoorOpened(doorId)
}

' Belangrijkste relaties
ScrumEscapeGame o-- GameScreen
GameScreen o-- Player
GameScreen o-- Monster
GameScreen o-- Door
GameScreen o-- QuestionManager
GameScreen o-- GameState
Monster ..|> Observer
GameScreen ..|> DoorObserver
Door o-- DoorObserver
QuestionManager o-- QuestionStrategy

' Notes voor context
note right of ScrumEscapeGame
  Hoofdklasse, startpunt van het spel
end note
note right of GameScreen
  Beheert spelverloop, input en rendering
end note
note right of Player
  Speler die beweegt en vragen beantwoordt
end note
note right of Monster
  Monster verschijnt bij fout antwoord
end note
note right of Door
  Deuren blokkeren voortgang tot vraag is beantwoord
end note
note right of QuestionManager
  Beheert alle vragen en finale vragen
end note
note right of GameState
  Singleton: centrale spelstatus
end note

@enduml 